@@ -2,7 +2,7 @@
 PACKAGE = chemfigit
 MAJOR = 0
 MINOR = 1
-MICRO = 5
+MICRO = 6
 TAG = 
 AUTHOR = James C. Stroud
 EMAIL = jstroud@mbi.ucla.edu
