@@ -1,3 +1,7 @@
+2013-09-02 Added "eps" to output file types and
+           added "pdftops" key to config schema to support
+           this option. Committed 0.1.6 to github.
+
 2013-08-13 Added "transparent" setting for raster images.
            Committed 0.1.5 to github.
 
